--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,16 +1,26 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
+<!DOCTYPE html>
 
-    Hello World
+<html lang="en">
+    <head>
+        <title></title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("css/app.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <script type="text/javascript">
+          var require = {
+            baseUrl: "assets/js"
+          };
+        </script>
+        <script data-main="main" src="@routes.Assets.versioned("js/libs/require.js")"></script>
 
-}
+    </head>
+     <body>
+        <div id="container">
+            <div ui-view></div>
+        </div>
+
+        <div id="overlay">
+            <img id="loadingSpinner" src="assets/images/spinner.gif">
+        </div>
+    </body>
+</html>
