--- a/public/js/templates/taken.html
+++ b/public/js/templates/taken.html
@@ -1,5 +1,7 @@
  <div class="leftContainer">
-    Hello
+    <a href="#/taken">Taken</a>
+    <br/>
+    <a href="#/edited">Edited</a>
 </div>
 <div class="rightContainer">
   <table>
@@ -26,7 +28,7 @@
       <td>Bar code</td>
       <td>Date Taken</td>
     </tr>
-    <tr ng-repeat="product in csv.result" >
+    <tr ng-repeat="product in uploadedproducts" >
       <td>{{product.image}}</td>
       <td>{{product.barcode}}</td>
       <td>{{product.date}}</td> 
